--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -141,5 +141,11 @@ jobs:
       - name: Update lambda code
         run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:$LAMBDA --s3-bucket $BUCKET_SECRET --s3-key $ZIP_FILE
       - name: Create new lambda layer version
-        run: echo "LAYER_VERSION_INFO=aws publish-layer-version --layer-name ${{ matrix.service }}-layer --description "Lambda Layer containing node_modules for ${{ matrix.service }}" --content S3Bucket=$BUCKET_SECRET,S3Key=nodejs.zip" --compatible-runtimes nodejs22.x >> $GITHUB_ENV
-      - run: echo $LAYER_VERSION
+        run: |
+          LAYER_VERSION_INFO=$(aws publish-layer-version \
+            --layer-name ${{ matrix.service }}-layer \
+            --description "Lambda Layer containing node_modules for ${{ matrix.service }}" \
+            --content S3Bucket=$BUCKET_SECRET,S3Key=nodejs.zip \
+            --compatible-runtimes nodejs22.x)
+          echo "LAYER_ARN=$(echo $LAYER_VERSION_INFO | jq -r .LayerVersionArn)" >> $GITHUB_ENV
+      - run: echo $LAYER_ARN
