--- a/pets-ui/tsconfig.app.json
+++ b/pets-ui/tsconfig.app.json
@@ -30,10 +30,11 @@
       "@sections/*": ["./src/sections/*"],
       "@components/*": ["./src/components/*"],
       "@redux/*": ["./src/redux/*"],
+      "@utils/*": ["./src/utils/*"],
     },
 
     /* Vitest config */
     "types": ["vitest/globals", "@testing-library/jest-dom"],
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
