--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -30,6 +30,7 @@
     "@redux-devtools/log-monitor": "^5.0.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
