--- a/pets-ui/sonar-project.properties
+++ b/pets-ui/sonar-project.properties
@@ -5,4 +5,5 @@ sonar.sources=src/
 sonar.exclusions=src/components/**/*.test.tsx, src/utils/*
 sonar.tests=src/components/, cypress
 sonar.test.inclusions=src/components/**/*.test.tsx, cypress/e2e/**
+sonar.test.exclusions=src/redux/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
