--- a/pets-ui/tsconfig.app.json
+++ b/pets-ui/tsconfig.app.json
@@ -28,10 +28,13 @@
       "@assets/*": ["./src/assets/*"],
       "@pages/*": ["./src/pages/*"],
       "@sections/*": ["./src/sections/*"],
+      "@components/*": ["./src/components/*"],
+      "@redux/*": ["./src/redux/*"],
+      "@utils/*": ["./src/utils/*"],
     },
 
     /* Vitest config */
     "types": ["vitest/globals", "@testing-library/jest-dom"],
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
