--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "govuk-frontend": "^5.7.1",
+    "pnpm": "^9.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
