--- a/pets-ui/tsconfig.app.json
+++ b/pets-ui/tsconfig.app.json
@@ -33,5 +33,5 @@
     /* Vitest config */
     "types": ["vitest/globals", "@testing-library/jest-dom"],
   },
-  "include": ["src", "Utils/DropdownOptions.ts"]
+  "include": ["src"]
 }
