--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -39,6 +39,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "2.1.8",
     "cypress": "^13.15.2",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
