--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -64,6 +64,14 @@ jobs:
           start: pnpm run dev
           browser: ${{ matrix.browser }}
 
+      - name: Upload Failed Tests Screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-tests-screenshots
+          path: pets-ui/cypress/screenshots
+
+
   build:
     name: Create UI build
     runs-on: ubuntu-latest
