--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Idea specific hidden files
 .idea/**
+.history
 
 # Node specific files
 node_modules/**
@@ -32,7 +33,7 @@ Temporary Items
 .apdisk
 
 # env
-.env
+.env.local
 
 # jest
 pets.code-workspace
