TBBETA-296: Created intermdediate package folder for new backend structure

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,5 +4,6 @@ packages:
   - 'core-services/applicant-service/**'
   - 'core-services/clinic-service/**'
   - 'core-services/lambda-authoriser/**'
+  - 'pets-backend/**' # TODO: Remove
   # if required, exclude some directories
   - '!**/app/pets-ui/**'
