TBBETA-296: Resolve linting errors with UI and cypress

--- a/pets-ui/tsconfig.json
+++ b/pets-ui/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "files": [],
+  "compilerOptions": {
+    "composite": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+  },
+  "exclude": ["cypress", "node_modules"],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.vite.json" }
