--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -24,7 +24,6 @@
     "sass": "^1.81.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
     "@redux-devtools/core": "^4.0.0",
     "@redux-devtools/dock-monitor": "^4.0.1",
     "@redux-devtools/log-monitor": "^5.0.1",
@@ -34,23 +33,18 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "2.1.8",
     "cypress": "^13.15.2",
     "cypress-mochawesome-reporter": "^3.8.2",
-    "eslint": "^9.14.0",
+    "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "jsdom": "^25.0.1",
     "msw": "^2.6.6",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0",
     "vite": "^5.4.12",
-    "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.5"
+    "vite-tsconfig-paths": "^5.1.2"
   }
 }
