--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.14.0",
     "@types/node": "^22.10.10",
+    "@vitest/coverage-v8": "2.1.8",
     "concurrently": "^9.1.2",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.11.0",
