--- a/pets-backend/package.json
+++ b/pets-backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
+    "aws-xray-sdk": "^3.10.1",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0"
   },
