TBBETA-296: Renamed core-services to a more permanent location

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
   },
   "exclude": [
     "node_modules",
-    "cypress"
+    "cypress",
+    "core-services"
   ],
   "references": [
     {
-      "path": "./pets-backend"
+      "path": "./pets-core-services"
     },
     {
       "path": "./pets-ui"
