--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -51,18 +51,34 @@ jobs:
         with:
           node-version: 18.x
           cache: "pnpm"
-      - name: Cypress install dependencies
-        uses: cypress-io/github-action@v6
+      - name: Cache Cypress Binary
+        uses: actions/cache@v4
         with:
-          runTests: false
+          path: ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-${{ hashFiles('pets-ui/pnpm-lock.yaml') }}
+          restore-keys: |
+            cypress-${{ runner.os }}-
+
+      - name: Install Dependencies
+        run: |
+          cd pets-ui
+          pnpm install
+          pnpm exec cypress verify
+      
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         with:
-          install: false
           working-directory: pets-ui
           build: pnpm run build
           start: pnpm run dev
           browser: ${{ matrix.browser }}
+          
+      - name: Upload Failed Tests Screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-tests-screenshots
+          path: pets-ui/cypress/screenshots
 
   build:
     name: Create UI build
