--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -1,10 +1,10 @@
 name: Pets UI CI
- 
+
 on:
   pull_request:
     paths: "pets-ui/**"
   workflow_dispatch:
- 
+
 jobs:
   test-and-linting:
     name: Run unit tests, linting & security checks
@@ -34,9 +34,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: pets-ui/
- 
+
   cypress-run:
-    name: Run Cypress tests
+    name: Run cypress tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -51,34 +51,31 @@ jobs:
         with:
           node-version: 18.x
           cache: "pnpm"
-      - name: Cache dependencies
-        uses: actions/cache@v4
+      - name: Cypress install dependencies
+        uses: cypress-io/github-action@v6
         with:
-         path:  ~/.cache/Cypress
-         key: ${{ runner.os }}-cypress-${{ hashFiles('pets-ui/pnpm-lock.yaml') }}
-         restore-keys: ${{ runner.os }}-cypress-
-      - name: Install Dependencies
-        run: |
-          cd pets-ui
-          pnpm install
-          pnpm exec cypress install
+          runTests: false
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         with:
+          install: false
           working-directory: pets-ui
           build: pnpm run build
           start: pnpm run dev
           browser: ${{ matrix.browser }}
+
       - name: Upload Failed Tests Screenshots
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: failed-tests-screenshots
           path: pets-ui/cypress/screenshots
- 
+
+
   build:
     name: Create UI build
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
