--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -3,17 +3,19 @@
   "private": true,
   "version": "1.0.0",
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
-    "aws-xray-sdk": "^3.10.1",
     "@middy/core": "^6.0.0",
-    "@middy/http-router": "^6.0.0"
+    "@middy/http-router": "^6.0.0",
+    "aws-xray-sdk": "^3.10.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
     "aws-sdk-client-mock": "^4.0.1",
-    "ts-node": "^10.9.2",
     "ts-patch": "^3.2.1",
+    "tsx": "^4.19.2",
     "typescript": "5.5.4",
     "typescript-transform-paths": "3.4.7",
     "vitest": "^2.1.5"
