--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -9,6 +9,7 @@
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
     "aws-xray-sdk": "^3.10.1",
+    "esbuild": "^0.24.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -20,5 +21,8 @@
     "typescript-transform-paths": "3.4.7",
     "vitest": "^2.1.5"
   },
-  "scripts": {}
+  "scripts": {
+    "build": "esbuild $path --bundle '--external:@aws-sdk/*' --platform=node --target=node18 --minify --keep-names --sourcemap=external --outbase=src --outfile=$BUILD_FOLDER/index.js",
+    "build-watch": ""
+  }
 }
