--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -14,16 +14,19 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
+    outputs:
+      config: ${{ steps.read-config.outputs.config }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Read deployment config
+        id: read-config
         run: |
-          config=$(cat deployment.config.json)
+          config=$(jq -c '.' deployment.config.json)
           echo "config=$config" >> $GITHUB_OUTPUT
         shell: bash
-        working-directory: pets-core-services
 
 
   deploy-lambdas:
@@ -38,7 +41,7 @@ jobs:
 
     strategy:
       matrix:
-        lambda: ${{ needs.fetch-deployment-config.outputs.config }}
+        lambda: ${{ fromJSON(needs.fetch-deployment-config.outputs.config) }}
 
     steps:
       - name: Configure AWS credentials
