--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -27,6 +27,7 @@ jobs:
           config=$(jq -c '.' deployment.config.json)
           echo "config=$config" >> $GITHUB_OUTPUT
         shell: bash
+        working-directory: pets-core-services
 
 
   deploy-lambdas:
