--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -55,8 +55,8 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CORE_SERVICES_ROLE_NAME }}"
           role-session-name: PETS-Core-Services-Deploy
 
-      - name: Load environment config
-        run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
+      # - name: Load environment config
+      #   run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
 
       - name: Checkout code
         uses: actions/checkout@v4
