--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -72,8 +72,12 @@ jobs:
         run: pnpm i
 
       - name: Build lambda source code
-        run: BUILD_FOLDER=$BUILD_FOLDER path=${{ matrix.lambda.path }} pnpm run build
+        run: pnpm run build
         working-directory: pets-core-services
+        env:
+          BUILD_FOLDER: ${{ env.BUILD_FOLDER }}
+          PATH: ${{ matrix.lambda.path }}
+
 
       - name: Include environment env in deployment package
         run: cp configs/.env.${{ inputs.environment }} pets-core-services/$BUILD_FOLDER
