TBBETA-296: Resolving wrong names

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -38,7 +38,7 @@ jobs:
 
     env:
       BUILD_FOLDER: '.build'
-      ZIP_NAME: 'deployment_package.zip'
+      ZIP_FILE: 'deployment_package.zip'
 
     strategy:
       matrix:
