--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -80,7 +80,7 @@ jobs:
         working-directory: pets-core-services
 
       - name: Update lambda code
-        run: aws lambda update-function-code --function-name ${{ matrix.lambda.name }} --zip-file $ZIP_FILE
+        run: aws lambda update-function-code --function-name ${{ matrix.lambda.name }} --zip-file fileb://$ZIP_FILE
         working-directory: pets-core-services
 
 
