TBBETA-296: Fixing spotted issues in zip and lambda code

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -76,7 +76,7 @@ jobs:
         working-directory: pets-core-services
 
       - name: Create zip
-        run: zip -r $ZIP_FILE $BUILD_FOLDER
+        run: zip -r $ZIP_FILE $BUILD_FOLDER/*
         working-directory: pets-core-services
 
       - name: Update lambda code
