--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -22,7 +22,7 @@
     "vitest": "^2.1.5"
   },
   "scripts": {
-    "build-lambda": "esbuild --bundle '--external:@aws-sdk/*' --platform=node --target=node18 --minify --keep-names --sourcemap=external",
+    "build-lambda": "esbuild --bundle '--external:@aws-sdk/*' --platform=node --target=node18 --sourcemap=external",
     "build-watch": ""
   }
 }
