--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -31,7 +31,7 @@ jobs:
 
 
   deploy-lambdas:
-    name: Build, package & deploy all lambdas
+    name: Build, package & deploy lambda
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     needs: fetch-deployment-config
@@ -55,9 +55,6 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CORE_SERVICES_ROLE_NAME }}"
           role-session-name: PETS-Core-Services-Deploy
 
-      # - name: Load environment config
-      #   run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
-
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Install pnpm
@@ -76,7 +73,7 @@ jobs:
         working-directory: pets-core-services
 
       - name: Create zip
-        run: zip -r $ZIP_FILE $BUILD_FOLDER/*
+        run: zip -r -j $ZIP_FILE $BUILD_FOLDER/*
         working-directory: pets-core-services
 
       - name: Update lambda code
