--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -8,7 +8,6 @@ on:
         required: true
 
 jobs:
-
   fetch-deployment-config:
     name: Fetch deployment config for all lambdas
     runs-on: ubuntu-latest
@@ -29,7 +28,6 @@ jobs:
         shell: bash
         working-directory: pets-core-services
 
-
   deploy-lambdas:
     name: Build, package & deploy lambda
     runs-on: ubuntu-latest
@@ -37,8 +35,9 @@ jobs:
     needs: fetch-deployment-config
 
     env:
-      BUILD_FOLDER: '.build'
-      ZIP_FILE: 'deployment_package.zip'
+      BUILD_FOLDER: ".build"
+      ZIP_FILE: "deployment_package.zip"
+      AWS_ACCOUNT_ID: secrets.AWS_ACCOUNT_ID
 
     strategy:
       matrix:
@@ -79,7 +78,6 @@ jobs:
       - name: Update lambda code
         run: aws lambda update-function-code --function-name ${{ matrix.lambda.name }} --zip-file fileb://$ZIP_FILE
         working-directory: pets-core-services
-
 
       # TODO: Generate the swagger file
 
