--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -8,31 +8,38 @@ on:
         required: true
 
 jobs:
-  fetch-deployment-config:
+  load-deployment-config:
     name: Fetch deployment config for all lambdas
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
     outputs:
-      config: ${{ steps.read-config.outputs.config }}
+      config: ${{ steps.deployment-config.outputs.deploy_config }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Read deployment config
-        id: read-config
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+
+
+      - name: Load Deployment config
+        id: deployment-config
         run: |
-          config=$(jq -c '.' deployment.config.json)
-          echo "config=$config" >> $GITHUB_OUTPUT
+          pets_config=$(node pets-config.js)
+          deploy_config=$(jq -c ".coreServicesDeployConfig" <<< $pets_config)
+          echo "deploy_config=$deploy_config" >> $GITHUB_OUTPUT
         shell: bash
-        working-directory: pets-core-services
 
   deploy-lambdas:
     name: Build, package & deploy lambda
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
-    needs: fetch-deployment-config
+    needs: load-deployment-config
 
     env:
       BUILD_FOLDER: ".build"
@@ -41,7 +48,7 @@ jobs:
 
     strategy:
       matrix:
-        lambda: ${{ fromJSON(needs.fetch-deployment-config.outputs.config) }}
+        lambda: ${{ fromJSON(needs.load-deployment-config.outputs.config) }}
 
     steps:
       - name: Configure AWS credentials
