TBBETA-296: Resolve Invalid file path error

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -110,17 +110,17 @@ jobs:
         run: pnpm i
 
       - name: Generate Swagger spec
-        run: pnpm tsx index.ts
+        run: pnpm tsx src/swagger-generator/index.ts
         env: # Explicitly specifying envs for visibility
           SPEC_FILE: env.SPEC_FILE
           APP_DOMAIN: env.APP_DOMAIN
-        working-directory: pets-core-services/src/swagger-generator
+        working-directory: pets-core-services
 
 
       - name: Upload Spec to S3 # TODO: Delete this step as part of TBBETA-647, Only here to ensure platforms deployment don't overwrite dev deployment
         run: aws s3 cp $SPEC_FILE s3://aw-pets-euw-dev-s3-clinicservicelambda --sse aws:kms --sse-kms-key-id secrets.SSE_KEY_SECRET
-        working-directory: pets-core-services/src/swagger-generator
+        working-directory: pets-core-services
 
       - name: Deploy Spec to API Gateway
         run: aws apigateway put-rest-api --rest-api-id --mode overwrite --body fileb://$SPEC_FILE
-        working-directory: pets-core-services/src/swagger-generator
+        working-directory: pets-core-services
