--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -42,7 +42,7 @@ jobs:
     env:
       BUILD_FOLDER: ".build"
       ZIP_FILE: "deployment_package.zip"
-      AWS_ACCOUNT_ID: secrets.AWS_ACCOUNT_ID
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
     strategy:
       matrix:
@@ -91,7 +91,7 @@ jobs:
     needs: deploy-lambdas
 
     env:
-      AWS_ACCOUNT_ID: secrets.AWS_ACCOUNT_ID
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       SPEC_FILE: swagger.json
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
 
@@ -121,7 +121,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CORE_SERVICES_ROLE_NAME }}"
-          role-session-name: PETS-Core-Services-Deploy
+          role-session-name: PETS-Core-Services-Deploy-Refreshed
 
       - name: Upload Spec to S3 # TODO: Delete this step as part of TBBETA-647, Only here to ensure platforms deployment don't overwrite dev deployment
         run: aws s3 cp $SPEC_FILE s3://aw-pets-euw-dev-s3-clinicservicelambda --sse aws:kms --sse-kms-key-id ${{ secrets.SSE_KEY_SECRET }}
